--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
 
 
             <ul id="navi">
-                <li class="list-item"><a href="http://127.0.0.1:5501/index.html">HOME</a></li>
+                <li class="list-item"><a href="index.html">HOME</a></li>
                 <li class="list-item"><a href="#about">ABOUT</a></li>
-                <li class="list-item"><a href="http://127.0.0.1:5501/menu.html">MENU</a></li>
-                <li class="list-item"><a href="http://127.0.0.1:5501/contact.html">CONTACT</a></li>
+                <li class="list-item"><a href="menu.html">MENU</a></li>
+                <li class="list-item"><a href="contact.html">CONTACT</a></li>
 
             </ul>
 
