--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
 
 
     <ul id="navi">
-    <li class="list-item"><a href="http://127.0.0.1:5501/index.html">HOME</a></li>
-    <li class="list-item"><a  href="http://127.0.0.1:5501/about.html">ABOUT</a></li>
-    <li class="list-item"><a  href="http://127.0.0.1:5501/menu.html">MENU</a></li>
+    <li class="list-item"><a href="./index.html">HOME</a></li>
+    <li class="list-item"><a  href="./about.html">ABOUT</a></li>
+    <li class="list-item"><a  href="./menu.html">MENU</a></li>
     <li class="list-item"><a  href="#contact">CONTACT</a></li>
     
     </ul>
