--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
     <ul id="navi">
     <li class="list-item"><a href="#container">HOME</a></li>
-    <li class="list-item"><a  href="http://127.0.0.1:5501/about.html">ABOUT</a></li>
-    <li class="list-item"><a  href="http://127.0.0.1:5501/menu.html">MENU</a></li>
-    <li class="list-item"><a  href="http://127.0.0.1:5501/contact.html">CONTACT</a></li>
+    <li class="list-item"><a  href="./about.html">ABOUT</a></li>
+    <li class="list-item"><a  href="menu.html">MENU</a></li>
+    <li class="list-item"><a  href="./contact.html">CONTACT</a></li>
     
     </ul>
 
@@ -53,7 +53,7 @@
 
 </div>
 
-<div id="res"><a href="http://127.0.0.1:5500/reservation.html">Reserve Now</a></div>
+<div id="res"><a href="./reservation.html">Reserve Now</a></div>
 
 
 </div>
