--- a/reservation.html
+++ b/reservation.html
@@ -29,10 +29,10 @@
 
 
     <ul id="navi">
-    <li class="list-item"><a href="#container">HOME</a></li>
-    <li class="list-item"><a  href="#about">ABOUT</a></li>
-    <li class="list-item"><a  href="#skill">MENU</a></li>
-    <li class="list-item"><a  href="#contact">CONTACT</a></li>
+    <li class="list-item"><a href="./index.html">HOME</a></li>
+    <li class="list-item"><a  href="./about.html">ABOUT</a></li>
+    <li class="list-item"><a  href="./menu.html">MENU</a></li>
+    <li class="list-item"><a  href="./contact.html">CONTACT</a></li>
     
     </ul>
 
